# yapchat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  justfile  package-lock.json  package.json  tailwind.config.js
assets/css/: styles.css
migrations/: 20240921105605_add_chat.up.sql  20240921105657_add_user.up.sql  20240921105849_add_chat_messages.down.sql  20240921105849_add_chat_messages.up.sql  20240921110112_add_users_in_chat.down.sql  20240921110112_add_users_in_chat.up.sql
src/: error.rs  main.rs  prelude.rs  utils.rs
src/domain/models/: mod.rs
src/infrastructure/: appstate.rs  mod.rs
src/infrastructure/query_services/: chat_query_service.rs  mod.rs
src/infrastructure/repos/: chat_message_repo.rs  chat_repo.rs  chat_users_repo.rs  mod.rs  user_repo.rs
src/routes/: api.rs  mod.rs  web.rs  ws.rs
src/routes/api/: mod.rs
src/routes/web/: mod.rs
templates/: chat.html  login.html
templates/chat/: chat_message.html  chat_message_input.html  chat_messages_list.html  chat_messages_panel.html
templates/partials/: base.html  chat_list.html  chat_list_item.html  chat_message.html  chat_messages_list.html
