[package]
name = "yapchat"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.78.0"

[profile.dev.package.sqlx-macros]
opt-level = 3


[dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "json",
    "uuid",
    "chrono",
] }
thiserror = "1.0.63"
askama = "0.12.1"
askama_axum = "0.4.0"
askama-filters = "0.1.3"
askama_escape = "0.10.3"
axum = "0.7.6"
axum-extra = "0.9.4"
chrono = "0.4.38"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json", "multipart", "stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tower = "0.5.1"
tower-http = { version = "0.6.0", features = [
    "cors",
    "fs",
    "normalize-path",
    "util",
] }
tower-livereload = "0.9.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }

[build-dependencies]
chrono = "0.4.38"
